// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`proof card golden snapshots > renders an unpriced model as n/a, never $0.00 1`] = `
"╭─────────────────────────────────────────────────────────────────────╮
│  ✓ PASS · A run on a model with no price row                        │
│  cli · 23 min · $1.77                               2026-06-08 14:32│
╰─────────────────────────────────────────────────────────────────────╯

── Contract ─────────────────────────────────────────────────── 44/44 ✓
  ████████████████████████████████████████████████████████████████
  ✓ 44 satisfied · 0 unsatisfied · 0 deviated

── Timing ─────────────────────────────────────────────────────────────
  Total        23 min
  Think        4 min
  Plan         5 min
  Build        10 min
  Verify       4 min

── Provenance ─────────────────────────────────────────────────────────
  session            turns  tools     in   out   cache   cost
  plan · opus-4-8       12     48  12.1k  4.2k  880.0k  $1.07
  build · opus-5-0      31    140  18.0k  9.1k    2.1M    n/a
  verify · opus-4-8     14     61  10.2k  3.0k  920.0k  $0.70
  ───────────────────────────────────────────────────────────
  TOTAL  3 sessions · 1 unpriced                        $1.77  (table v3)
  completeness  ✓ complete (plan 1/1 · build 1/1 · verify 1/1)
"
`;

exports[`proof card golden snapshots > renders the FAIL/DEVIATED card with failures and deviation detail 1`] = `
"╭─────────────────────────────────────────────────────────────────────╮
│  ✗ FAIL · Some half-built feature                                   │
│  cli · 31 min                                       2026-06-05 22:40│
╰─────────────────────────────────────────────────────────────────────╯

── Contract ────────────────────────────────────────── 9/12 · 2 ✗ · 1 ⚠
  ████████████████████████████████████████████████░░░░░░░░░░░░░░░░
  9 satisfied · 2 unsatisfied · 1 deviated
  ✗ A007  Webhook signature is verified before processing
  ✗ A008  Errors return a 4xx status
  ⚠ A010  Idempotency key is enforced on retried writes
        → built with a 5-minute TTL instead of permanent dedup

── Timing ─────────────────────────────────────────────────────────────
  Total        31 min
  Think        3 min
  Plan         6 min
  Build        12 min
  Verify       10 min
"
`;

exports[`proof card golden snapshots > renders the provenance-absent card (the default) 1`] = `
"╭─────────────────────────────────────────────────────────────────────╮
│  ✓ PASS · Close the loop on proof context                           │
│  cli · 18 min                                       2026-06-07 09:11│
╰─────────────────────────────────────────────────────────────────────╯

── Contract ─────────────────────────────────────────────────── 12/12 ✓
  ████████████████████████████████████████████████████████████████
  ✓ 12 satisfied · 0 unsatisfied · 0 deviated

── Timing ─────────────────────────────────────────────────────────────
  Total        18 min
  Think        2 min
  Plan         4 min
  Build        8 min
  Verify       4 min
"
`;

exports[`proof card golden snapshots > renders the provenance-rich card 1`] = `
"╭─────────────────────────────────────────────────────────────────────╮
│  ✓ PASS · Proof card visual redesign                                │
│  cli · 23 min · $4.02                               2026-06-08 14:32│
╰─────────────────────────────────────────────────────────────────────╯

── Contract ─────────────────────────────────────────────────── 44/44 ✓
  ████████████████████████████████████████████████████████████████
  ✓ 44 satisfied · 0 unsatisfied · 0 deviated

── Timing ─────────────────────────────────────────────────────────────
  Total        23 min
  Think        4 min
  Plan         5 min
  Build        10 min
  Verify       4 min

── Findings ──────────────────────────────────────────── 1 debt · 6 obs
  [debt · scope] SEVERITY_ORDER map duplicated
  [observation · monitor] Hardcoded literal 10
  [observation · monitor] No summary truncation
  [observation · monitor] Fourth finding
  [observation · monitor] Fifth finding
  2 more — see \`ana proof proof-card-redesign --json\`

── Provenance ─────────────────────────────────────────────────────────
  model  claude-opus-4-8
  session  turns  tools     in   out   cache   cost
  plan        12     48  12.1k  4.2k  880.0k  $1.07
  build       31    140  18.0k  9.1k    2.1M  $1.94
  build 2      9     22   4.0k  1.1k  410.0k  $0.31
  verify      14     61  10.2k  3.0k  920.0k  $0.70
  ─────────────────────────────────────────────────
  TOTAL  4 sessions                           $4.02  (table v3)
  churn  1 files · +840/−210
  completeness  ✓ complete (plan 1/1 · build 2/2 · verify 1/1)
"
`;

exports[`proof card golden snapshots > renders the ≥6-session card aligned within 80 columns 1`] = `
"╭─────────────────────────────────────────────────────────────────────╮
│  ✓ PASS · A feature that took many build attempts                   │
│  cli · 23 min · $6.68                               2026-06-08 14:32│
╰─────────────────────────────────────────────────────────────────────╯

── Contract ─────────────────────────────────────────────────── 44/44 ✓
  ████████████████████████████████████████████████████████████████
  ✓ 44 satisfied · 0 unsatisfied · 0 deviated

── Timing ─────────────────────────────────────────────────────────────
  Total        23 min
  Think        4 min
  Plan         5 min
  Build        10 min
  Verify       4 min

── Provenance ─────────────────────────────────────────────────────────
  model  claude-opus-4-8
  session  turns  tools     in   out   cache   cost
  plan        12     48  12.1k  4.2k  880.0k  $1.07
  build       31    140  18.0k  9.1k    2.1M  $1.94
  build 2     20     90  12.0k  6.0k    1.3M  $1.19
  build 3      9     22   4.0k  1.1k  410.0k  $0.31
  build 4     15     70   9.0k  4.0k  950.0k  $0.91
  build 5     11     40   7.0k  2.0k  630.0k  $0.57
  verify      14     61  10.2k  3.0k  920.0k  $0.70
  ─────────────────────────────────────────────────
  TOTAL  7 sessions                           $6.68  (table v3)
  completeness  ✓ complete (plan 1/1 · build 5/5 · verify 1/1)
"
`;
